css .list-mentors fixed gap

--- a/src/css/our-mentors.css
+++ b/src/css/our-mentors.css
@@ -41,9 +41,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    column-gap: 24px;
-    row-gap: 72px;
-    flex-grow: 1;
+    gap: 40px;
     margin: 0 auto;
 }
 
